# gravitate

./: CMakeLists.txt  ricci formula.txt
include/: block.hpp  grblock.hpp  tensor.hpp  tuple_splice.hpp
include/detail/: tensor_detail.hpp
src/: block_test.cpp  grblock_test.cpp  main.cpp  tensor_test.cpp
